footer alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -372,7 +372,7 @@
   justify-content: flex-end;
 }
 .links {
-  width: 30%;
+  width: 23%;
   margin-right: 10%;
   height: 100%;
   display: flex;
